--- a/static/src/css/styles.css
+++ b/static/src/css/styles.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  /* Daisy UI misses the following */
+  .input:focus {
+    border-color: hsl(var(--bc)/var(--tw-border-opacity));
+    @apply ring-transparent;
+  }
+  .input-error:focus {
+    @apply border-error;
+  }
+}
